versioned_docs/version-7.1/client-api/changes/content/_how-to-subscribe-to-document-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

Subscribe to document changes using `ForDocument`, `ForDocumentsInCollection`,
`ForDocumentsStartingWith`, or `ForAllDocuments`.

<Admonition type="warning" title="">
The `Subscribe` method on the observable these methods return accepts only an `IObserver` object
by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:
   * [ForDocument](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocument)
   * [ForDocumentsInCollection](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsincollection)
   * [ForDocumentsStartingWith](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsstartingwith)
   * [ForAllDocuments](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#foralldocuments)
   * [DocumentChange and DocumentChangeTypes syntax](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax)

</Admonition>

<Panel heading="ForDocument">

Single document changes can be observed using `ForDocument` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<DocumentChange> ForDocument(string docId);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | ID of a document for which notifications will be processed. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[DocumentChange](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for given document. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForDocument("employees/1")
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case DocumentChangeTypes.Put:
                    // do something
                    break;
                case DocumentChangeTypes.Delete:
                    // do something
                    break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForDocumentsInCollection">

To observe all document changes in particular collection use `ForDocumentInCollection` method. This method filters documents by `@collection` metadata property value.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<DocumentChange> ForDocumentsInCollection(string collectionName);

IChangesObservable<DocumentChange> ForDocumentsInCollection<TEntity>();
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **collectionName** | string | Name of document collection for which notifications will be processed. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[DocumentChange](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for given document collection name. |

<Admonition type="info" title="">
Overload with `TEntity` type uses `Conventions.GetCollectionName` to get collection name.
</Admonition>

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForDocumentsInCollection<Employee>()
    .Subscribe(change => Console.WriteLine("{0} on document {1}", change.Type, change.Id));
```
<br />

or

```csharp
string collectionName = store.Conventions.FindCollectionName(typeof(Employee));
IDisposable subscription = store
    .Changes()
    .ForDocumentsInCollection(collectionName)
    .Subscribe(change => Console.WriteLine("{0} on document {1}", change.Type, change.Id));
```

</ContentFrame>

</Panel>

<Panel heading="ForDocumentsStartingWith">

To observe all document changes for documents with ID that contains given prefix use `ForDocumentsStartingWith` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<DocumentChange> ForDocumentsStartingWith(string docIdPrefix);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **docIdPrefix** | string | Document ID prefix for which notifications will be processed. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[DocumentChange](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for given document ID prefix. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForDocumentsStartingWith("employees/1") // employees/1, employees/10, employees/11, etc.
    .Subscribe(change => Console.WriteLine("{0} on document {1}", change.Type, change.Id));
```

</ContentFrame>

</Panel>

<Panel heading="ForAllDocuments">

To observe all document changes use `ForAllDocuments` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<DocumentChange> ForAllDocuments();
```
<br />

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[DocumentChange](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for all documents. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForAllDocuments() // employees/1, orders/1, customers/1, etc.
    .Subscribe(change => Console.WriteLine("{0} on document {1}", change.Type, change.Id));
```

</ContentFrame>

</Panel>

<Panel heading="DocumentChange and DocumentChangeTypes syntax">

<Tabs>
<TabItem value="DocumentChange" label="DocumentChange">

**The notification object delivered to subscribers when a document changes.**

```csharp
class DocumentChange
{
    DocumentChangeTypes Type
    string Id
    string CollectionName
    string ChangeVector
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Type** | [DocumentChangeTypes](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax) | Document change type enum |
| **Id** | string | Document identifier |
| **CollectionName** | string | Document's collection name |
| **ChangeVector** | string | Document's ChangeVector |

</TabItem>
<TabItem value="DocumentChangeTypes" label="DocumentChangeTypes">

```csharp
enum DocumentChangeTypes
{
    None,
    Put,
    Delete,
    BulkInsertStarted,
    BulkInsertEnded,
    BulkInsertError,
    DeleteOnTombstoneReplication,
    Conflict,
    Common,
}
```
<br />

| Name | Value |
| ---- | ----- |
| **None** | `0` |
| **Put** | `1` |
| **Delete** | `2` |
| **BulkInsertStarted** | `4` |
| **BulkInsertEnded** | `8` |
| **BulkInsertError** | `16` |
| **DeleteOnTombstoneReplication** | `32` |
| **Conflict** | `64` |
| **Common** | `Put \| Delete` |

</TabItem>
</Tabs>

</Panel>
